code cleanup; now closing buffers; added more exceptions; multi-line titles; URI functionality